--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-<div id= "grad">
+<div id="grad">
 <!-- Goal is to make four images responsive through JS (Do I link to that in a diffrent document?- Yes through Script) -->
 
 <div class="text"><h1>Photos of Greece</h1>
@@ -30,7 +30,7 @@
 
 <div id=ruins><p>Click here to show/hide a photo of Greek ruins.</p><img src="images/ruins.jpg" alt="Photo: Greek Ruins" class=image4></div>
 
-View <a href="https://github.com/macloo/jquery-beginners-2018">my GitHub repo</a>.
+View <a href= "https://github.com/DaphnaKrause/assignment-10">my GitHub repo</a>
 
 <!-- just leave this be -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
